Fix friday bar alignment and remove mo/dy - v2

--- a/client/src/app/components/activity-tracker/activity-tracker.scss
+++ b/client/src/app/components/activity-tracker/activity-tracker.scss
@@ -393,6 +393,10 @@
       height: 200px;
       position: relative;
       z-index: 100;
+
+      + label {
+        display: inline-block;
+      }
     }
 
     .fill {
